--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,4 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".inmobiliariaApp.ui.home.HomeFragment"/>
+    tools:context=".inmobiliariaApp.ui.home.HomeFragment">
+
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/mapa"
+        class="com.google.android.gms.maps.SupportMapFragment"
+         />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
