--- a/app/src/main/res/menu/_drawer.xml
+++ b/app/src/main/res/menu/_drawer.xml
@@ -7,16 +7,7 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
-
+            android:title="@string/ubicacion" />
         <item
             android:id="@+id/contratosFragment"
             android:title="@string/contratos" />
