--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#1E88E5</color>
-    <color name="colorPrimaryDark">#1565C0</color>
-    <color name="colorSecondary">#43A047</color>
+    <color name="colorPrimary">#6C63FF</color>
+    <color name="colorPrimaryDark">#564ecf</color>
+    <color name="colorSecondary">#A593FF</color>
     <color name="colorBackground">#FFFFFF</color>
 
     <color name="colorTextPrimary">#212121</color>
@@ -13,4 +13,6 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="errorRed">#E53935</color>
+
+
 </resources>
