--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -54,8 +54,8 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp"
-            android:dividerPadding="8dp">
-
+            android:dividerPadding="8dp"
+            >
 
             <EditText
                 android:id="@+id/etDni"
@@ -67,6 +67,16 @@
                 android:backgroundTint="@color/colorPrimary"
                 android:inputType="number" />
 
+
+            <TextView
+                android:id="@+id/tvErrorDni"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="DNI inválido"
+                android:textColor="@color/errorRed"
+                android:textSize="12sp"
+                android:visibility="gone" />
+
             <EditText
                 android:id="@+id/etNombre"
                 android:layout_width="match_parent"
@@ -77,15 +87,35 @@
                 android:backgroundTint="@color/colorPrimary"
                 android:inputType="textPersonName" />
 
+
+            <TextView
+                android:id="@+id/tvErrorNombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre inválido"
+                android:textColor="@color/errorRed"
+                android:textSize="12sp"
+                android:visibility="gone" />
+
             <EditText
                 android:id="@+id/etApellido"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:enabled="false"
                 android:hint="Apellido"
+                android:enabled="false"
                 android:textColorHint="#999999"
                 android:backgroundTint="@color/colorPrimary"
                 android:inputType="textPersonName" />
+
+
+            <TextView
+                android:id="@+id/tvErrorApellido"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Apellido inválido"
+                android:textColor="@color/errorRed"
+                android:textSize="12sp"
+                android:visibility="gone" />
 
             <EditText
                 android:id="@+id/etMail"
@@ -97,15 +127,15 @@
                 android:backgroundTint="@color/colorPrimary"
                 android:inputType="textEmailAddress" />
 
-            <EditText
-                android:id="@+id/etPassword"
+
+            <TextView
+                android:id="@+id/tvErrorMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Contraseña"
-                android:enabled="false"
-                android:textColorHint="#999999"
-                android:backgroundTint="@color/colorPrimary"
-                android:inputType="textPassword" />
+                android:text="Correo inválido"
+                android:textColor="@color/errorRed"
+                android:textSize="12sp"
+                android:visibility="gone" />
 
             <EditText
                 android:id="@+id/etTelefono"
@@ -117,6 +147,15 @@
                 android:backgroundTint="@color/colorPrimary"
                 android:inputType="phone" />
 
+
+            <TextView
+                android:id="@+id/tvErrorTelefono"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Teléfono inválido"
+                android:textColor="@color/errorRed"
+                android:textSize="12sp"
+                android:visibility="gone" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -124,17 +163,17 @@
         android:id="@+id/btnEditarGuardar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:layout_marginHorizontal="16dp"
-        android:text="EDITAR"
-        android:textAllCaps="false"
-        android:textColor="@color/colorBackground"
+        android:layout_marginTop="24dp"
         android:backgroundTint="@color/colorSecondary"
         android:elevation="6dp"
         android:fontFamily="sans-serif-medium"
+        android:text="Editar"
+        android:textAllCaps="false"
+        android:textColor="@color/colorBackground"
         app:cornerRadius="50dp"
-        app:layout_constraintTop_toBottomOf="@id/cardDatos"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/cardDatos" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
