--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -171,10 +171,26 @@
         android:text="Editar"
         android:textAllCaps="false"
         android:textColor="@color/colorBackground"
-        app:cornerRadius="50dp"
+        app:cornerRadius="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardDatos" />
+
+    <Button
+        android:id="@+id/btnCambiarPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:text="Cambiar contraseña"
+        android:textAllCaps="false"
+        android:textColor="@color/colorBackground"
+        app:cornerRadius="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnEditarGuardar" />
+
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/loaderPerfil"
