--- a/app/src/main/res/layout/fragment_cambiar_password.xml
+++ b/app/src/main/res/layout/fragment_cambiar_password.xml
@@ -1,103 +1,139 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:padding="24dp"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@color/colorBackground">
-
+    tools:context=".inmobiliariaApp.ui.perfil.cambiarPassword.CambiarPasswordFragment">
 
     <ImageView
-        android:id="@+id/imagenCambiar"
+        android:id="@+id/imgCambiarPassword"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:contentDescription="Foto de perfil"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/cambiar"
         android:scaleType="centerCrop"
-        android:layout_marginBottom="24dp" />
-
-
-
-
-    <EditText
-        android:id="@+id/etContraseniaActual"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Contraseña actual"
-        android:inputType="textPassword"
-        android:backgroundTint="@color/colorPrimary"
-        android:padding="12dp"
-        android:layout_marginBottom="4dp"
-        android:drawablePadding="8dp"
-        />
+        android:contentDescription="Cambiar contraseña"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/tvErrorContraseniaActual"
-        android:layout_width="match_parent"
+        android:id="@+id/tvTituloCambiar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Error contraseña actual"
-        android:textColor="@color/errorRed"
-        android:textSize="12sp"
-        android:visibility="gone"
-        android:layout_marginBottom="8dp"/>
+        android:text="Cambiar contraseña"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/imgCambiarPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-
-    <EditText
-        android:id="@+id/etNuevaContrasenia"
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardCambiarPassword"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nueva contraseña"
-        android:inputType="textPassword"
-        android:backgroundTint="@color/colorPrimary"
-        android:padding="12dp"
-        android:layout_marginBottom="4dp"
-        android:drawablePadding="8dp"
-        />
+        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="8dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="6dp"
+        android:backgroundTint="@color/colorBackground"
+        app:layout_constraintTop_toBottomOf="@id/tvTituloCambiar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <TextView
-        android:id="@+id/tvErrorNuevaContrasenia"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Error nueva contraseña"
-        android:textColor="@color/errorRed"
-        android:textSize="12sp"
-        android:visibility="gone"
-        android:layout_marginBottom="8dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:elevation="0dp"
+            >
 
 
-    <EditText
-        android:id="@+id/etRepetirContrasenia"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Repetir nueva contraseña"
-        android:inputType="textPassword"
-        android:backgroundTint="@color/colorPrimary"
-        android:padding="12dp"
-        android:layout_marginBottom="4dp"
-        android:drawablePadding="8dp"
-        />
+            <EditText
+                android:id="@+id/etContraseniaActual"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Contraseña actual"
+                android:inputType="textPassword"
+                android:backgroundTint="@color/colorPrimary"
+                android:padding="12dp"
+                android:layout_marginBottom="4dp"/>
 
-    <TextView
-        android:id="@+id/tvErrorRepetirContrasenia"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Error repetir contraseña"
-        android:textColor="@color/errorRed"
-        android:textSize="12sp"
-        android:visibility="gone"
-        android:layout_marginBottom="16dp"/>
+            <TextView
+                android:id="@+id/tvErrorContraseniaActual"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ingrese la contraseña actual"
+                android:textColor="@color/errorRed"
+                android:textSize="12sp"
+                android:visibility="gone"
+                android:layout_marginBottom="8dp"/>
+
+
+            <EditText
+                android:id="@+id/etNuevaContrasenia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nueva contraseña"
+                android:inputType="textPassword"
+                android:backgroundTint="@color/colorPrimary"
+                android:padding="12dp"
+                android:layout_marginBottom="4dp"/>
+
+            <TextView
+                android:id="@+id/tvErrorNuevaContrasenia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ingrese una nueva contraseña"
+                android:textColor="@color/errorRed"
+                android:textSize="12sp"
+                android:visibility="gone"
+                android:layout_marginBottom="8dp"/>
+
+
+            <EditText
+                android:id="@+id/etRepetirContrasenia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Repetir nueva contraseña"
+                android:inputType="textPassword"
+                android:backgroundTint="@color/colorPrimary"
+                android:padding="12dp"
+                android:layout_marginBottom="4dp"/>
+
+            <TextView
+                android:id="@+id/tvErrorRepetirContrasenia"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Las contraseñas no coinciden"
+                android:textColor="@color/errorRed"
+                android:textSize="12sp"
+                android:visibility="gone"
+                android:layout_marginBottom="8dp"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
     <Button
         android:id="@+id/btnGuardar"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Guardar"
         android:textColor="@color/colorBackground"
         android:backgroundTint="@color/colorSecondary"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="24dp"
         app:cornerRadius="12dp"
-        android:padding="12dp"/>
+        app:layout_constraintTop_toBottomOf="@id/cardCambiarPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="6dp"/>
+
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/loaderPerfil"
@@ -106,6 +142,10 @@
         android:indeterminate="true"
         android:visibility="gone"
         app:indicatorColor="@color/colorPrimary"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/btnGuardar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
