--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -165,7 +165,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/colorSecondary"
+        android:backgroundTint="@color/colorPrimary"
         android:elevation="6dp"
         android:fontFamily="sans-serif-medium"
         android:text="Editar"
@@ -182,7 +182,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="12dp"
-        android:backgroundTint="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorSecondary"
         android:text="Cambiar contraseña"
         android:textAllCaps="false"
         android:textColor="@color/colorBackground"
@@ -199,11 +199,10 @@
         android:indeterminate="true"
         android:visibility="gone"
         app:indicatorColor="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/btnEditarGuardar"
+        app:layout_constraintTop_toBottomOf="@id/btnCambiarPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
-
+        android:layout_marginTop="24dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
