--- a/app/src/main/res/layout/fragment_cambiar_password.xml
+++ b/app/src/main/res/layout/fragment_cambiar_password.xml
@@ -153,7 +153,7 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnGuardar"
+            android:id="@+id/btnGuardarInmueble"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Guardar"
@@ -179,7 +179,7 @@
             app:trackThickness="5dp"
             app:indicatorColor="@color/colorPrimary"
             app:trackColor="@color/colorBackground"
-            app:layout_constraintTop_toBottomOf="@id/btnGuardar"
+            app:layout_constraintTop_toBottomOf="@id/btnGuardarInmueble"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
